Bug #1799: Petition status bar being cut off.

--- a/sites/all/modules/dosomething/features/dosomething_petitions/dosomething_petitions.sass
+++ b/sites/all/modules/dosomething/features/dosomething_petitions/dosomething_petitions.sass
@@ -123,6 +123,7 @@ div.horizontal-tabs
     font-size: 21px
     font-weight: bold
     font-weight: 500
+    padding-top: 5px
     #signatures-count
       float: right
     #signatures-label
